--- a/index.html
+++ b/index.html
@@ -10,9 +10,114 @@
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+
+<header>
+  <div>
+    <ul>
+      <li>Home</li>
+      <li>Experiencias</li>
+      <li>Projetos</li>
+      <li>Sobre</li>
+      <li>Contato</li>
+    </ul>
+  </div>
+  <div>
+    <div>
+      <h2>Sobre mim</h2>
+      <p>É com grande entusiasmo que lhe apresento uma visão privilegiada de minha jornada como programador front-end. Como um estudante dedicado de Tecnologia da Informação e um apaixonado por criar experiências digitais excepcionais, estou entusiasmado em compartilhar um vislumbre das minhas conquistas e ambições.</p>
+    </div>
+    <div>
+      <img src="" alt="">
+      <h3>Programador Front End</h3>
+    </div>
+  </div>
+</header>
+<section>
+  <div>
+    <h3>Exeperiencias</h3>
+  </div>
+  <div>
+    <ul>
+      <li>Html</li>
+      <li>Css</li>
+      <li>bootstrap</li>
+      <li>JavaScript</li>
+      <li>Typescript</li>
+      <li>ReactJs</li>
+      <li>Node.Js</li>
+      <li>Postregree</li>
+    </ul>
+  </div>
+</section>
+<section>
+
+  <div>
+    <h3>Projetos</h3>
+  </div>
+
+  <div>
+    <div>
+      <img src="" alt=""> <!-- Imagens Projeto-->
+    </div>
+    <div>
+      <h4>Nome do projeto</h4>
+      <p> Descrição</p>
+    </div>
+  </div>
+
+  <div>
+    <div>
+      <img src="" alt=""> <!-- Imagens Projeto-->
+    </div>
+    <div>
+      <h4>Nome do projeto</h4>
+      <p> Descrição</p>
+    </div>
+  </div>
+
+  <div>
+    <div>
+      <img src="" alt=""> <!-- Imagens Projeto-->
+    </div>
+    <div>
+      <h4>Nome do projeto</h4>
+      <p> Descrição</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h4>Outros Projetos</h4>
+  <div>
+    <div>
+      <img src="" alt="">
+      <h4> nome do projeto</h4>
+      <p> Descrição</p>
+      <button>Ver mais</button>
+    </div>
+  </div>
+</section>
+
+<footer>
+<div>
+  <h4>Contato</h4>
+  <div>
+    <h4>Me envie uma mennsagem</h4>
+    <ul>
+      <li>telefone</li>
+      <li>Linkedin</li>
+      <li>Github</li>
+    </ul>
+  </div>
+  <div>
+    <form action="">
+      Email
+    </form>
+  </div>
+</div>
 
 
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
