concluindo estrutura do html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div>
+  <div class="list">
     <ul>
       <li>Home</li>
       <li>Experiencias</li>
@@ -22,12 +23,12 @@
     </ul>
   </div>
   <div>
-    <div>
+    <div class="about_me">
       <h2>Sobre mim</h2>
       <p>É com grande entusiasmo que lhe apresento uma visão privilegiada de minha jornada como programador front-end. Como um estudante dedicado de Tecnologia da Informação e um apaixonado por criar experiências digitais excepcionais, estou entusiasmado em compartilhar um vislumbre das minhas conquistas e ambições.</p>
     </div>
-    <div>
-      <img src="" alt="">
+    <div class="img_prog">
+      <img src="./img/1562023206761.jpg" alt="">
       <h3>Programador Front End</h3>
     </div>
   </div>
