nav nav-pills no top-bar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 <body>
 
 <header>
-  <div class="list">
-    <ul>
-      <li>Home</li>
-      <li>Experiencias</li>
-      <li>Projetos</li>
-      <li>Sobre</li>
-      <li>Contato</li>
-    </ul>
+  <div class="top-bar ">
+    <div class="list">
+      <ul class="nav nav-pills">
+        <li>Home</li>
+        <li>Experiencias</li>
+        <li>Projetos</li>
+        <li>Sobre</li>
+        <li>Contato</li>
+      </ul>
+    </div>
   </div>
   <div>
     <div class="about_me">
@@ -33,6 +35,7 @@
     </div>
   </div>
 </header>
+
 <section>
   <div>
     <h3>Exeperiencias</h3>
