--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
 </head>
 <body>
 
-<header>
-  <div class="top-bar ">
-    <div class="list">
-      <ul class="nav nav-pills">
-        <li>Home</li>
-        <li>Experiencias</li>
-        <li>Projetos</li>
-        <li>Sobre</li>
-        <li>Contato</li>
-      </ul>
+  <header>
+    <nav class="header_nav navbar navbar-expand-md">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">Experiências</a>
+          <a class="nav-link" href="#">Projetos</a>
+          <a class="nav-link" href="#">Sobre</a>
+        </div>
+    </nav>
+  
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 about_me">
+          <h2>Sobre mim</h2>
+          <p>É com grande entusiasmo que lhe apresento uma visão privilegiada de minha jornada como programador front-end. Como um estudante dedicado de Tecnologia da Informação e um apaixonado por criar experiências digitais excepcionais, estou entusiasmado em compartilhar um vislumbre das minhas conquistas e ambições.</p>
+        </div>
+        <div class="col-md-6 img_prog">
+          <img src="./img/1562023206761.jpg" alt="">
+          <h3>Programador Front End</h3>
+        </div>
+      </div>
     </div>
-  </div>
-  <div>
-    <div class="about_me">
-      <h2>Sobre mim</h2>
-      <p>É com grande entusiasmo que lhe apresento uma visão privilegiada de minha jornada como programador front-end. Como um estudante dedicado de Tecnologia da Informação e um apaixonado por criar experiências digitais excepcionais, estou entusiasmado em compartilhar um vislumbre das minhas conquistas e ambições.</p>
-    </div>
-    <div class="img_prog">
-      <img src="./img/1562023206761.jpg" alt="">
-      <h3>Programador Front End</h3>
-    </div>
-  </div>
-</header>
+  </header>
+
 
 <section>
   <div>
