--- a/index.html
+++ b/index.html
@@ -11,32 +11,190 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>  <!-- início cabeçalho -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-light">
 
-  <header>
-    <nav class="header_nav navbar navbar-expand-md">
-        <div class="navbar-nav">
-          <a class="nav-link" href="#">Home</a>
-          <a class="nav-link" href="#">Experiências</a>
-          <a class="nav-link" href="#">Projetos</a>
-          <a class="nav-link" href="#">Sobre</a>
+      <div class="container">
+
+        <a href="#" class="navbar-brand"> 
+          <img src="#" width="142">
+         </a>
+         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+
+        <div class="collapse navbar-collapse" id="nav-principal">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link text-light">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link text-light">Recursos</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link text-light">Benefícios</a>
+              </li>
+              <li class="nav-item">
+                 <a href="" class="nav-link text-light">Preços</a>
+              </li>
+              <li>
+                <button href="" class="btn btn-outline-light ml-4">Contato</button>
+              </li>
+            </ul>   
         </div>
+
+      </div>
     </nav>
-  
+  </header>
+  <section id="home"> <!-- Inicio da sessão -->
     <div class="container">
       <div class="row">
-        <div class="col-md-6 about_me">
-          <h2>Sobre mim</h2>
-          <p>É com grande entusiasmo que lhe apresento uma visão privilegiada de minha jornada como programador front-end. Como um estudante dedicado de Tecnologia da Informação e um apaixonado por criar experiências digitais excepcionais, estou entusiasmado em compartilhar um vislumbre das minhas conquistas e ambições.</p>
+
+        <div class="col-md-6 d-none d-sm-block" > <!-- Imagem da sessão -->
+          <img src="img/capa-mulher.png">
         </div>
-        <div class="col-md-6 img_prog">
-          <img src="./img/1562023206761.jpg" alt="">
-          <h3>Programador Front End</h3>
+
+        <div class="col-md-6 d-flex"> <!-- Texto da sessão -->
+          <div class="align-self-center">
+            <h1 class="display-4">Suas contas, descomplicadas</h1>
+              <p> usado por mais de 1 milhão de pessoas, o finans é uma   
+                ferramente online que vai facilitar sua vida financeira.</p>
+            <form class="mt-4">
+              <div class="input-group input-group-lg">
+                <input type="text" placeholder="seu e-mail" class="form-control">
+                <div class="input-group-append">
+                  <button type="button" class="btn btn-primary">Cadastre-se</button>
+                </div>
+              </div>
+            </form> 
+
+            <p class="mt-2">
+              Disponível para
+              <a href="" class="btn btn-outline-light">
+                <i class="fa-brands fa-android fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-light">
+                <i class="fa-brands fa-apple fa-lg" id="apple"></i>
+              </a>
+            </p>   
         </div>
+
+      </div> <!-- Fim texto da sessão -->
+
+        
       </div>
     </div>
-  </header>
+  </section> <!-- Fim da sessão -->
 
+  <section class="caixa">
+    <div class="container">
 
+      <div class="row">
+
+        <div class="col-md-6 d-flex">
+
+         <div class="align-self-center">
+          <h2>Saiba para onde vai o seu dinheiro</h2>
+          <p>Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro</p>
+          <a href="#" class="btn btn-primary">Veja mais</a>
+         </div>
+
+        </div>
+         <div class="col-md-6">
+          <img src="img/saiba.png" class="img-fluid">
+         </div> 
+
+      </div>
+
+    </div>
+  </section>
+
+  <section class="caixa">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/juros.png" class="img-fluid">
+         </div> 
+        <div class="col-md-6 d-flex">
+
+         <div class="align-self-center">
+          <h2>Pare de pagar juros e economize</h2>
+          <p>Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber!</p>
+          <a href="#" class="btn btn-primary">Veja mais</a>
+         </div>
+
+        </div>
+
+      </div>
+      
+    </div>
+  </section>
+
+  <section class="caixa">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="img/facil.png" class="img-fluid">
+          <h2>Fácil de Usar</h2>
+          <p>O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. SImples como tem que ser!</p>
+        </div>
+        <div class="col-md-4">
+          <img src="img/economize.png" class="img-fluid">
+          <h2>Economize seu tempo</h2>
+          <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa para você!</p>
+        </div>
+        <div class="col-md-4">
+          <img src="img/suporte.png" class="img-fluid">
+          <h2>Suporte amigo</h2>
+          <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+        </div>
+      </div>       
+    </div>
+  </section>
+
+  <footer class="mt-4 mb-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <p>
+          <a href="" class="mt-3">Home</a>
+          <a href="" class="mt-3">Benefícios</a>
+          <a href="" class="mt-3">Recursos</a>
+          <a href="" class="mt-3">Planos</a>
+          </p>
+        </div>
+
+        <div class="col-md-4">
+              <a href="" class="btn btn-outline-primary mr-1 mt-1">
+                <i class="fa-brands fa-twitter fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-primary mr-1 mt-1">
+                <i class="fa-brands fa-facebook-square fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-success mr-1 mt-1">
+                <i class="fa-brands fa-whatsapp fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-danger mr-1 mt-1">
+                <i class="fa-brands fa-youtube fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark mr-1 mt-1">
+                <i class="fa-brands fa-instagram fa-lg"></i>
+              </a>
+              <a href="" class="btn btn-outline-primary mr-1 mt-1">
+                <i class="fa-brands fa-telegram fa-lg"></i>
+              </a>
+
+        </div>
+
+      </div>
+    </div>
+
+  </footer>
+
+  
+
+<!-- 
 <section>
   <div>
     <h3>Exeperiencias</h3>
@@ -62,7 +220,7 @@
 
   <div>
     <div>
-      <img src="" alt=""> <!-- Imagens Projeto-->
+      <img src="" alt=""> 
     </div>
     <div>
       <h4>Nome do projeto</h4>
@@ -72,7 +230,7 @@
 
   <div>
     <div>
-      <img src="" alt=""> <!-- Imagens Projeto-->
+      <img src="" alt=""> 
     </div>
     <div>
       <h4>Nome do projeto</h4>
@@ -82,7 +240,7 @@
 
   <div>
     <div>
-      <img src="" alt=""> <!-- Imagens Projeto-->
+      <img src="" alt=""> 
     </div>
     <div>
       <h4>Nome do projeto</h4>
@@ -128,3 +286,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
+
+-->
