Ajustes de texto

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="col-md-6 d-flex">
 
        <div class="align-self-center">
-        <h2>Pare de pagar juros e economize</h2>
-        <p>Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber!</p>
+        <h2>Sistema de Filas</h2>
+        <p>Projeto produzido em HTML, CSS e JavaScript com o intuito de simular um painel de filas em estabelecimento específico.</p>
         <a href="#" class="btn btn-primary">Veja mais</a>
        </div>
 
