Ajuste no texto 2

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     </div>
   </div>
 </section> <!-- Fim da sessão -->
-
+<div class="text-center">
+  <h2>Projetos</h2>
+</div>
 <section class="caixa">
-  <div class="text-center">
-    <h2>Projetos</h2>
-  </div>
+
   <div class="container">
 
     <div class="row">
@@ -96,7 +96,7 @@
 
       </div>
        <div class="col-md-6">
-        <img src="./img/img_andrads.jpg" class="img-fluid">
+        <a href="#"><img src="./img/img_andrads.jpg" class="img-fluid"></a>
        </div> 
 
     </div>
@@ -116,6 +116,27 @@
        <div class="align-self-center">
         <h2>Sistema de Filas</h2>
         <p>Projeto produzido em HTML, CSS e JavaScript com o intuito de simular um painel de filas em estabelecimento específico.</p>
+        <a href="#" class="btn btn-primary">Veja mais</a>
+       </div>
+
+      </div>
+
+    </div>
+    
+  </div>
+</section>
+<section class="caixa">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-6">
+        <img src="img/juros.png" class="img-fluid">
+       </div> 
+      <div class="col-md-6 d-flex">
+
+       <div class="align-self-center">
+        <h2>G finance</h2>
+        <p>Projeto para lançamentos e controle de finanças pessoais e profissionais</p>
         <a href="#" class="btn btn-primary">Veja mais</a>
        </div>
 
