--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
 
 <section class="caixa">
   <div class="container">
+
+    <div class="row">
+      <div class="col-md-6">
+        <img src="img/juros.png" class="img-fluid">
+       </div> 
+      <div class="col-md-6 d-flex">
+
+       <div class="align-self-center">
+        <h2>Aplcicação Help Desk</h2>
+        <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores</p>
+        <a href="#" class="btn btn-primary">Veja mais</a>
+       </div>
+
+      </div>
+
+    </div>
+    
+  </div>
+</section>
+
+<section class="caixa">
+  <div class="container">
     <div class="row">
       <div class="col-md-4">
         <img src="img/facil.png" class="img-fluid">
