add button with icon github

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
        <div class="align-self-center">
         <h2>Ecommerce - Andrads Barbearia</h2>
         <p>Site responsivo desenvolvido apenas com Html, Css e JavaScript com funções de Adicionar ao carrinho e manipulação de produtos ao mesmo, filtro de produtos, preços e ofertas.</p>
-        <a href="#" class="btn btn-primary">Veja mais</a>
+        <a href="#" class="btn btn-primary">Veja mais </a>
+        <a href="#" class="btn btn-dark"><i class='bx bxl-github text-light' ></i></a>
        </div>
 
       </div>
@@ -116,7 +117,7 @@
        <div class="align-self-center">
         <h2>Sistema de Filas</h2>
         <p>Projeto produzido em HTML, CSS e JavaScript com o intuito de simular um painel de filas em estabelecimento específico.</p>
-        <a href="#" class="btn btn-primary">Veja mais</a>
+        <a href="#" class="btn btn-primary">Veja mais <i class='bx bxl-github text-light' ></i></a>
        </div>
 
       </div>
