--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
        <div class="align-self-center">
         <h2>Ecommerce - Andrads Barbearia</h2>
         <p>Site responsivo desenvolvido apenas com Html, Css e JavaScript com funções de Adicionar ao carrinho e manipulação de produtos ao mesmo, filtro de produtos, preços e ofertas.</p>
-        <a href="#" class="btn btn-primary">Veja mais </a>
-        <a href="#" class="btn btn-dark"><i class='bx bxl-github text-light' ></i></a>
+        <a href="#" class="btn btn-primary">Ver no Github <i class='bx bxl-github text-light' ></i> </a>
+ 
        </div>
 
       </div>
@@ -158,7 +158,7 @@
       <div class="col-md-6 d-flex">
 
        <div class="align-self-center">
-        <h2>Aplcicação Help Desk</h2>
+        <h2>Aplicação Help Desk</h2>
         <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores</p>
         <a href="#" class="btn btn-primary">Veja mais</a>
        </div>
