add form before footer

--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
     </div>       
   </div>
 </section>
+<form class="mt-4">
+  <h4>Me envie um feedback</h4>
+  <textarea name="feedback" id="feedback" cols="30" rows="5"></textarea>
+  
+  <div class="input-group input-group-lg">
+    <input type="text" placeholder="Seu e-mail" class="form-control" id="email">
+    <div class="input-group-append">
+      <button type="button" class="btn btn-primary">Enviar</button>
+    </div>
+  </div>
+</form>
 
 <footer class="mt-4 mb-4">
   <div class="container">
