--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
 </section>
 
 <section class="caixa">
+  <div>
+    <p class="h3">Experiências</p>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
