Add text in exp

--- a/index.html
+++ b/index.html
@@ -166,13 +166,28 @@
     <div class="row">
       <div class="col-md-4">
         <img src="img/facil.png" class="img-fluid">
-        <h2>Fácil de Usar</h2>
-        <p>O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. SImples como tem que ser!</p>
+        <h2>HTML</h2>
+        <p>Nível consolidado nessa linguagem de marcação utilizada em praticamente todos os projetos que elaborei</p>
       </div>
       <div class="col-md-4">
         <img src="img/economize.png" class="img-fluid">
-        <h2>Economize seu tempo</h2>
-        <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa para você!</p>
+        <h2>CSS</h2>
+        <p>Possuo noções básicas em CSS, mas sempre buscando novas habilidades</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/suporte.png" class="img-fluid">
+        <h2>Suporte amigo</h2>
+        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/suporte.png" class="img-fluid">
+        <h2>Suporte amigo</h2>
+        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/suporte.png" class="img-fluid">
+        <h2>Suporte amigo</h2>
+        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
