--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
       <div class="col-md-4">
         <img src="img/economize.png" class="img-fluid">
         <h2>CSS</h2>
-        <p>Possuo noções básicas em CSS, mas sempre buscando novas habilidades</p>
+        <p>Possuo noções básicas em CSS com atribuições de propriedades e seletores, mas sempre buscando novas habilidades</p>
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
-        <h2>Suporte amigo</h2>
-        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+        <h2>JavaScript</h2>
+        <p>possuo boa lógica e compreensão em leitura de algorítmo em javascript, pratiquei com implementação de funções e exercícios em plataforma de treinamento específica</p>
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
