--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <div class="row">
       <div class="col-md-4">
         <img src="img/facil.png" class="img-fluid">
+        <!-- 
         <h2>HTML</h2>
         <p>Nível consolidado nessa linguagem de marcação utilizada em praticamente todos os projetos que elaborei</p>
       </div>
@@ -174,6 +175,7 @@
         <h2>CSS</h2>
         <p>Possuo noções básicas em CSS com atribuições de propriedades e seletores, mas sempre buscando novas habilidades</p>
       </div>
+      -->
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
         <h2>JavaScript</h2>
@@ -181,18 +183,18 @@
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
-        <h2>Suporte amigo</h2>
-        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+        <h2>Bootstrap</h2>
+        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
-        <h2>Suporte amigo</h2>
-        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+        <h2>Git Github</h2>
+        <p>Realizo commits diários e consolido o conhecimento nessas ferramentas</p>
       </div>
       <div class="col-md-4">
         <img src="img/suporte.png" class="img-fluid">
-        <h2>Suporte amigo</h2>
-        <p>Dúvidas? Nosso suporte altamente qualificado ajuda você! A gente está aqui para resolver seus probelmas e deixa sua vida mais fácil</p>
+        <h2>React</h2>
+        <p></p>
       </div>
     </div>       
   </div>
