--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
   </div>
   <div class="container">
     <div class="row">
+      <!--
       <div class="col-md-4">
         <img src="img/facil.png" class="img-fluid">
-        <!-- 
+         
         <h2>HTML</h2>
         <p>Nível consolidado nessa linguagem de marcação utilizada em praticamente todos os projetos que elaborei</p>
       </div>
@@ -177,22 +178,23 @@
       </div>
       -->
       <div class="col-md-4">
-        <img src="img/suporte.png" class="img-fluid">
+        <img src="img/icons8-javascript-240.png" class="img-fluid img-thumbnail img-resize">
         <h2>JavaScript</h2>
         <p>possuo boa lógica e compreensão em leitura de algorítmo em javascript, pratiquei com implementação de funções e exercícios em plataforma de treinamento específica</p>
       </div>
       <div class="col-md-4">
-        <img src="img/suporte.png" class="img-fluid">
+        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-thumbnail img-resize">
         <h2>Bootstrap</h2>
         <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
       <div class="col-md-4">
-        <img src="img/suporte.png" class="img-fluid">
+        <img src="img/icons8-git-240.png" class="img-fluid img-thumbnail img-resize">
+        <img src="img/icons8-github-250.png" class="img-fluid img-thumbnail img-resize">
         <h2>Git Github</h2>
         <p>Realizo commits diários e consolido o conhecimento nessas ferramentas</p>
       </div>
       <div class="col-md-4">
-        <img src="img/suporte.png" class="img-fluid">
+        <img src="img/icons8-react-400.png" class="img-fluid img-thumbnail img-resize">
         <h2>React</h2>
         <p></p>
       </div>
