last commit today

--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
         <img src="img/juros.png" class="img-fluid">
        </div> 
       <div class="col-md-6 d-flex">
-
        <div class="align-self-center">
         <h2>Aplicação Help Desk</h2>
         <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores</p>
@@ -177,24 +176,24 @@
         <p>Possuo noções básicas em CSS com atribuições de propriedades e seletores, mas sempre buscando novas habilidades</p>
       </div>
       -->
-      <div class="col-md-4">
-        <img src="img/icons8-javascript-240.png" class="img-fluid img-thumbnail img-resize">
+      <div class="col-md-3">
+        <img src="img/icons8-javascript-240.png" class="img-fluid img-resize">
         <h2>JavaScript</h2>
-        <p>possuo boa lógica e compreensão em leitura de algorítmo em javascript, pratiquei com implementação de funções e exercícios em plataforma de treinamento específica</p>
+        <p>possuo boa lógica e compreensão em leitura de algorítmo em javascript, pratiquei com implementação de funções, conforme projetos, além de exercícios avulsos e na plataforma de treinamento específica</p>
       </div>
-      <div class="col-md-4">
-        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-thumbnail img-resize">
+      <div class="col-md-3">
+        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-resize">
         <h2>Bootstrap</h2>
         <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
-      <div class="col-md-4">
-        <img src="img/icons8-git-240.png" class="img-fluid img-thumbnail img-resize">
-        <img src="img/icons8-github-250.png" class="img-fluid img-thumbnail img-resize">
+      <div class="col-md-3">
+        <img src="img/icons8-git-240.png" src="img/icons8-github-250.png" class="img-fluid img-resize">
+        <img src="img/icons8-github-250.png" class="img-fluid img-resize">
         <h2>Git Github</h2>
         <p>Realizo commits diários e consolido o conhecimento nessas ferramentas</p>
       </div>
-      <div class="col-md-4">
-        <img src="img/icons8-react-400.png" class="img-fluid img-thumbnail img-resize">
+      <div class="col-md-3">
+        <img src="img/icons8-react-400.png" class="img-fluid img-resize">
         <h2>React</h2>
         <p></p>
       </div>
