--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 </section>
 
 <section class="caixa">
-  <div>
-    <p class="h3">Experiências</p>
+  <div class="text-center p-5">
+    <p class="h2">Experiências</p>
   </div>
   <div class="container">
     <div class="row">
