ajuste icon header

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
       <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="" class="nav-link"><i class='bx bxl-linkedin text-light' ></i></a>
+              <a href="" class="nav-link"><i class='bx bxl-linkedin text-light  bx-sm' ></i></a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link"><i class='bx bxl-whatsapp text-light' ></i></a>
+              <a href="" class="nav-link"><i class='bx bxl-whatsapp text-light bx-sm' ></i></a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link"><i class='bx bxl-telegram text-light' ></i></a>
+              <a href="" class="nav-link"><i class='bx bxl-telegram text-light bx-sm' ></i></a>
             </li>
             <li class="nav-item">
-               <a href="" class="nav-link"><i class='bx bxl-github text-light' ></i></a>
+               <a href="" class="nav-link"><i class='bx bxl-github text-light bx-sm' ></i></a>
             </li>
           </ul>   
       </div>
@@ -50,7 +50,7 @@
     <div class="row">
 
       <div class="col-md-6 d-none d-sm-block" > <!-- Imagem da sessão -->
-        <img src="img/capa-mulher.png">
+        <img src="./img/">
       </div>
 
       <div class="col-md-6 d-flex"> <!-- Texto da sessão -->
@@ -65,9 +65,10 @@
     </div>
   </div>
 </section> <!-- Fim da sessão -->
-<div class="text-center">
+<div class="text-center p-3">
   <h2>Projetos</h2>
 </div>
+<hr>
 <section class="caixa">
 
   <div class="container">
@@ -226,7 +227,7 @@
 
       <div class="col-md-4">
             <a href="" class="btn btn-outline-primary mr-1 mt-1">
-              <i class="fa-brands fa-twitter fa-lg"></i>
+              <i class="fa-brands fa-twitter "></i>
             </a>
             <a href="" class="btn btn-outline-primary mr-1 mt-1">
               <i class="fa-brands fa-facebook-square fa-lg"></i>
