--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </header>
 
 <section id="home"> <!-- Inicio da sessão -->
-  <div class="container">
+  <div class="container p-5">
 
 
     <div class="row">
@@ -68,7 +68,6 @@
 <div class="text-center p-3">
   <h2>Projetos</h2>
 </div>
-<hr>
 <section class="caixa">
 
   <div class="container">
