--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
         <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
       <div class="col-md-3">
+        <img src="img/icons8-typescript-240.png" class="img-fluid img-resize">
+        <h2>TypeScript</h2>
+        <p>Noções de TypeScript</p>
+      </div>
+      <div class="col-md-3">
         <img src="img/icons8-git-240.png" src="img/icons8-github-250.png" class="img-fluid img-resize">
         <img src="img/icons8-github-250.png" class="img-fluid img-resize">
         <h2>Git Github</h2>
