--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
         <h2>React</h2>
         <p></p>
       </div>
+      <div class="col-md-3">
+        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-resize">
+        <h2>Bootstrap</h2>
+        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
+      </div>
+      <div class="col-md-3">
+        <img src="img/icons8-nodejs-240.png" class="img-fluid img-resize">
+        <h2>Node JS</h2>
+        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
+      </div>
     </div>       
   </div>
 </section>
