add icon Mongo DB

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
         <h2>Node JS</h2>
         <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
+      <div class="col-md-3">
+        <img src="img/icons8-mongo.png" class="img-fluid img-resize">
+        <h2>Mongo DB</h2>
+        <p>Alguma noção com banco de dados</p>
+      </div>
     </div>       
   </div>
 </section>
