--- a/index.html
+++ b/index.html
@@ -182,30 +182,19 @@
         <p>possuo boa lógica e compreensão em leitura de algorítmo em javascript, pratiquei com implementação de funções, conforme projetos, além de exercícios avulsos e na plataforma de treinamento específica</p>
       </div>
       <div class="col-md-3">
-        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-resize">
-        <h2>Bootstrap</h2>
-        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
-      </div>
-      <div class="col-md-3">
         <img src="img/icons8-typescript-240.png" class="img-fluid img-resize">
         <h2>TypeScript</h2>
         <p>Noções de TypeScript</p>
       </div>
       <div class="col-md-3">
-        <img src="img/icons8-git-240.png" src="img/icons8-github-250.png" class="img-fluid img-resize">
-        <img src="img/icons8-github-250.png" class="img-fluid img-resize">
-        <h2>Git Github</h2>
-        <p>Realizo commits diários e consolido o conhecimento nessas ferramentas</p>
+        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-resize">
+        <h2>Bootstrap</h2>
+        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
       <div class="col-md-3">
         <img src="img/icons8-react-400.png" class="img-fluid img-resize">
         <h2>React</h2>
         <p></p>
-      </div>
-      <div class="col-md-3">
-        <img src="img/icons8-bootstrap-240.png" class="img-fluid img-resize">
-        <h2>Bootstrap</h2>
-        <p>Compreendi facilmente o intuito do bootstrap, e com essa economia de tempo e padronização de projetos adquiri experiência ao produzir no próprio portifólio, aplicação help desk entre outros</p>
       </div>
       <div class="col-md-3">
         <img src="img/icons8-nodejs-240.png" class="img-fluid img-resize">
@@ -217,7 +206,18 @@
         <h2>Mongo DB</h2>
         <p>Alguma noção com banco de dados</p>
       </div>
-    </div>       
+      <div class="col-md-3">
+        <img src="img/icons8-php-480.png" class="img-fluid img-resize">
+        <h2>PHP</h2>
+        <p>conhecimento em PHP adquirido através de treinamento e projeto citado acima de lista de tarefas e aplicação de help desk</p>
+      </div>
+      <div class="col-md-3">
+        <img src="img/icons8-git-240.png" src="img/icons8-github-250.png" class="img-fluid img-resize">
+        <img src="img/icons8-github-250.png" class="img-fluid img-resize">
+        <h2>Git Github</h2>
+        <p>Realizo commits diários e consolido o conhecimento nessas ferramentas</p>
+      </div>
+    </div> 
   </div>
 </section>
 <form class="mt-4">
