--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <div class="col-md-6 d-none d-sm-block" > <!-- Imagem da sessão -->
         <img src="./img/">
       </div>
-
+      <!-- Descrição breve -->
       <div class="col-md-6 d-flex"> <!-- Texto da sessão -->
         <div class="align-self-center">
-          <h1 class="display-4">Desenvolvedor Junior</h1>
+          <h1 class="display-4">Desenvolvedor Junior </h1>
             <p> Desde minha infância estive ligado a algo tecnológico, porém foi na fase adulta me interessei em entender como esse universo funciona, a partir dessa curiosidade fui criando o hábito de me envolver com a programação e hoje, ela já faz parte da minha vida.</p>
         </div>
 
