--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
        <div class="align-self-center">
         <h2>Ecommerce - Andrads Barbearia</h2>
-        <p>Site responsivo desenvolvido apenas com Html, Css e JavaScript com funções de Adicionar ao carrinho e manipulação de produtos ao mesmo, filtro de produtos, preços e ofertas.</p>
+        <p>Site responsivo desenvolvido apenas com Html, Css e JavaScript com funções de Adicionar ao carrinho e manipulação de produtos ao mesmo com funcionalidades de filtro de produtos, preços e ofertas.</p>
         <a href="#" class="btn btn-primary">Ver no Github <i class='bx bxl-github text-light' ></i> </a>
  
        </div>
