--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
       <div class="col-md-6 d-flex">
        <div class="align-self-center">
         <h2>Aplicação Help Desk</h2>
-        <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores</p>
+        <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores
+        com funcionalidades dos métodos GET e POST</p>
         <a href="#" class="btn btn-primary">Veja mais</a>
        </div>
 
