--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
        <div class="align-self-center">
         <h2>Aplicação Help Desk</h2>
         <p>desenvolvido com Html, Bootstrap e PHP, essa aplicação simula plataforma de chamados entre usuários e Administradores
-        com funcionalidades dos métodos GET e POST</p>
+        com funcionalidades dos métodos GET e POST (Projeto em desenvolvido em sua base em conjunto com curso da Udemy e posteriomente aperfeiçoado com conhecimentos prórpios</p>
         <a href="#" class="btn btn-primary">Veja mais</a>
        </div>
 
